// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add funnel step 1`] = `
Array [
  Object {
    "actorProperty": undefined,
    "eventCollection": "clicks",
    "filters": Array [],
    "inverted": false,
    "optional": false,
    "timeframe": "this_14_days",
    "timezone": undefined,
    "withActors": false,
  },
  Object {
    "actorProperty": undefined,
    "eventCollection": undefined,
    "filters": Array [],
    "inverted": false,
    "optional": false,
    "timeframe": "this_14_days",
    "timezone": undefined,
    "withActors": false,
  },
]
`;

exports[`update funnel step 1`] = `
Array [
  Object {
    "actorProperty": undefined,
    "eventCollection": "logins",
    "filters": Array [],
    "inverted": false,
    "optional": false,
    "timeframe": "this_14_days",
    "timezone": undefined,
    "withActors": true,
  },
]
`;
